feat/public controller
